autodep8 (0.5.2) UNRELEASED; urgency=medium

  [ Ondřej Nový ]
  * Python: Substitute hyphen with underscore for module name

  [ Barry Warsaw ]
  * Python: Added support for PyPy (Closes: #823883)

 -- Ondřej Nový <novy@ondrej.org>  Thu, 19 May 2016 17:25:59 +0200

autodep8 (0.5.1) unstable; urgency=medium

  * test/helper.sh: include extra information on failed tests to help
    debugging.
  * avoid partial matches in `Testsuite` field, e.g. `r` should never match
    `ruby`
  * make sure supported languages are always tested in a consistent order

 -- Antonio Terceiro <terceiro@debian.org>  Mon, 25 Apr 2016 16:15:02 -0300

autodep8 (0.5) unstable; urgency=medium

  [ Gordon Ball ]
  * Add detection and simple test generation for R
  * Update d/control with supported package types

  [ Antonio Terceiro ]
  * Build and install a manpage out of README.md

 -- Antonio Terceiro <terceiro@debian.org>  Mon, 25 Apr 2016 11:53:47 -0300

autodep8 (0.4) unstable; urgency=medium

  [ Ondřej Nový ]
  * Standards-Version is 3.9.8 (no changes needed).
  * Changed Vcs-* URLs to https schema.
  * Fixed list in package description.
  * Added Python support.

  [ Antonio Terceiro ]
  * Add missing NodeJS and DKMS into list of supported package types in this
    package's description
  * NodeJS: change directory to $ADTTMP before trying to require module to
    avoid using code from source package.

 -- Antonio Terceiro <terceiro@debian.org>  Sun, 24 Apr 2016 10:41:33 -0300

autodep8 (0.3) unstable; urgency=medium

  * split tests by language
  * Ruby: remove commented lines from Build-Depends fields
  * NodeJS:
    - also detect NodeJS packages by binary packages
    - add support for reading upstream name from package.json (Closes: #803176)
      - added dependency and build dependency on python3 (autopkgtest itself
        already depends on python3 anyway)
    - add support for reading upstream name from binary package