@@ -29,6 +29,15 @@ if [ ! -f debian/control ]; then
   exit 1
 fi
 
+rc=1
+
+if [ -f debian/tests/control.autodep8 ]; then
+  cat debian/tests/control.autodep8
+  echo
+  rc=0 # will now exit successfully even if we can't detect a package type.
+fi
+
+
 for support_dir in \
   $(dirname $0)/support \
   /usr/local/share/autodep8/support \
@@ -47,4 +56,4 @@ do
   fi
 done
 
-exit 1
+exit $rc
