@@ -6,6 +6,10 @@ autodep8 (0.5.2) UNRELEASED; urgency=medium
   [ Barry Warsaw ]
   * Python: Added support for PyPy (Closes: #823883)
 
+  [ Antonio Terceiro ]
+  * If `debian/tests/control.autodep8` exists, autodep8 will prepend the
+    contents of that file to its own output. (Closes: #823931)
+
  -- Ondřej Nový <novy@ondrej.org>  Thu, 19 May 2016 17:25:59 +0200
 
 autodep8 (0.5.1) unstable; urgency=medium
